implement department and docs
